--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -6,8 +6,8 @@
 
 <style>
     :root {
-        --primary: brown;
-        --secondary: rgb(119, 31, 31);
+        --primary: #3b71ca;
+        --secondary: darkblue;
         --accent: #f5dd5d;
         --primary-fg: #fff;
 
@@ -25,9 +25,9 @@
         --breadcrumbs-link-fg: var(--body-bg);
         --breadcrumbs-bg: var(--primary);
 
-        --link-fg: brown;
-        --link-hover-color: rgb(119, 31, 31);
-        --link-selected-fg: rgb(119, 31, 31);
+        --link-fg: var(--primary);
+        --link-hover-color: darkblue;
+        --link-selected-fg: darkblue;
 
         --hairline-color: #e8e8e8;
         --border-color: #ccc;
